--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
     <meta charset="utf-8">
     <title>Dowcip z półobrotu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
-<body>
+<body class="header">
     <button id="get-joke">Random joke</button>
     <p id="joke"></p>
     <script type="text/javascript" src="javascript/scripts.js"></script>
